<resources>
    <string name="app_name">App 1</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="have_an_account">Have an account</string>
    <string name="email">email</string>
    <string name="logout">Logout</string>
    <string name="there">There</string>
    <string name="todo">TODO</string>
    <string name="gmailId">Gmail id</string>
    <string name="next_page">Next Page</string>
    <string name="send_mail">send mail</string>
    <string name="file_name">File Name\n</string>
    <string name="file_content">File Content\n</string>
    <string name="attach_file">Attach File\n</string>
    <string name="stopButtonText">Stop\n</string>
    <string name="startButtonText">Start\n</string>
    <string name="contacts">Contacts</string>
    <string name="email_address_fill_only_if_you_want_to_send_email">Email Address (fill only if you want to send email.)</string>
    <string name="text_message">Text message</string>
</resources>